All references have been reordered alphabetically

--- a/Qmatrix Design/biblio.bib
+++ b/Qmatrix Design/biblio.bib
@@ -1,3 +1,10 @@
+@article{aleven2013knowledge,
+  title={--Knowledge Component (KC) Approaches to Learner Modeling},
+  author={Aleven, Vincent and Koedinger, Kenneth R},
+  journal={Design Recommendations for Intelligent Tutoring Systems},
+  pages={165},
+  year={2013}
+}
 
 @article{baker2009state,
   title={The state of educational data mining in 2009: A review and future visions},
@@ -9,322 +16,12 @@
   year={2009}
 }
 
-@misc{doroudi2017misidentified,
-  title={The misidentified identifiability problem of bayesian knowledge tracing},
-  author={Doroudi, Shayan and Brunskill, Emma},
-  year={2017},
-  publisher={International Conference on Educational Data Mining, EDM2017}
-}
-
-@article{van2013properties,
-  title={Properties of the bayesian knowledge tracing model},
-  author={van De Sande, Brett},
-  journal={Journal of Educational Data Mining},
-  volume={5},
-  number={2},
-  pages={1--10},
-  year={2013},
-  publisher={International Educational Data Mining Society}
-}
-
-@inproceedings{beck2007identifiability,
-  title={Identifiability: A fundamental problem of student modeling},
-  author={Beck, Joseph E and Chang, Kai-min},
-  booktitle={International Conference on User Modeling},
-  pages={137--146},
-  year={2007},
-  organization={Springer}
-}
-
-@article{fayyad1996data,
-  title={From data mining to knowledge discovery in databases},
-  author={Fayyad, Usama and Piatetsky-Shapiro, Gregory and Smyth, Padhraic},
-  journal={AI magazine},
-  volume={17},
-  number={3},
-  pages={37},
-  year={1996}
-}
-
-@book{templin2010diagnostic,
-  title={Diagnostic measurement: Theory, methods, and applications},
-  author={Templin, Jonathan and Henson, Robert A and others},
-  year={2010},
-  publisher={Guilford Press}
-}
-
-@article{templin2006measurement,
-  title={Measurement of psychological disorders using cognitive diagnosis models.},
-  author={Templin, Jonathan L and Henson, Robert A},
-  journal={Psychological methods},
-  volume={11},
-  number={3},
-  pages={287},
-  year={2006},
-  publisher={American Psychological Association}
-}
-
-@article{rupp2007answer,
-  title={The answer is in the question: A guide for investigating the theoretical potentials and practical limitations of cognitive psychometric models},
-  author={Rupp, AA},
-  journal={International Journal of Testing},
-  volume={7},
-  pages={95--125},
-  year={2007}
-}
-
-@article{maris1995psychometric,
-  title={Psychometric latent response models},
-  author={Maris, Eric},
-  journal={Psychometrika},
-  volume={60},
-  number={4},
-  pages={523--547},
-  year={1995},
-  publisher={Springer}
-}
-
-@article{haertel1989using,
-  title={Using restricted latent class models to map the skill structure of achievement items},
-  author={Haertel, Edward H},
-  journal={Journal of Educational Measurement},
-  pages={301--321},
-  year={1989},
-  publisher={JSTOR}
-}
-
-@article{maris1999estimating,
-  title={Estimating multiple classification latent class models},
-  author={Maris, Eric},
-  journal={Psychometrika},
-  volume={64},
-  number={2},
-  pages={187--212},
-  year={1999},
-  publisher={Springer}
-}
-
-@article{xu2008fitting,
-  title={Fitting the structured general diagnostic model to NAEP data},
-  author={Xu, Xueli and Davier, Matthias},
-  journal={ETS Research Report Series},
-  volume={2008},
-  number={1},
-  pages={i--18},
-  year={2008},
-  publisher={Wiley Online Library}
-}
-
-@article{rupp2007cognitive,
-  title={Cognitive foundations of structured item response models},
-  author={Rupp, Andr{\'e} A and Mislevy, Robert J},
-  journal={Cognitive diagnostic assessment for education: Theories and applications},
-  pages={205--240},
-  year={2007}
-}
-
-@article{koren2009matrix,
-  title={Matrix factorization techniques for recommender systems},
-  author={Koren, Yehuda and Bell, Robert and Volinsky, Chris},
-  journal={Computer},
-  number={8},
-  pages={30--37},
-  year={2009},
-  publisher={IEEE}
-}
-
-@inproceedings{desmarais2014refinement,
-  title={The refinement of a Q-matrix: Assessing methods to validate tasks to skills mapping},
-  author={Desmarais, Michel and Beheshti, Behzad and Xu, Peng},
-  booktitle={Educational Data Mining 2014},
-  year={2014}
-}
-
-@article{lee1999learning,
-  title={Learning the parts of objects by non-negative matrix factorization},
-  author={Lee, Daniel D and Seung, H Sebastian},
-  journal={Nature},
-  volume={401},
-  number={6755},
-  pages={788--791},
-  year={1999},
-  publisher={Nature Publishing Group}
-}
-
-@article{desmarais2012mapping,
-  title={Mapping question items to skills with non-negative matrix factorization},
-  author={Desmarais, Michel C},
-  journal={ACM SIGKDD Explorations Newsletter},
-  volume={13},
-  number={2},
-  pages={30--36},
-  year={2012},
-  publisher={ACM}
-}
-
-@inproceedings{desmarais2015combining,
-  title={Combining techniques to refine item to skills Q-matrices with a partition tree},
-  author={Desmarais, Michel C and Xu, Peng and Beheshti, Behzad},
-  booktitle={Educational Data Mining 2015},
-  year={2015}
-}
-
-@book{galbraith2002analysis,
-  title={The analysis and interpretation of multivariate data for social scientists},
-  author={Galbraith, JI and Moustaki, Irini and Bartholomew, David J and Steele, Fiona},
-  year={2002},
-  publisher={CRC Press}
-}
-
-@article{madison2015effects,
-  title={The Effects of Q-Matrix Design on Classification Accuracy in the Log-Linear Cognitive Diagnosis Model},
-  author={Madison, Matthew J and Bradshaw, Laine P},
-  journal={Educational and Psychological Measurement},
-  volume={75},
-  number={3},
-  pages={491--511},
-  year={2015},
-  publisher={SAGE Publications}
-}
-
-@article{rupp2008effects,
-  title={The effects of Q-matrix misspecification on parameter estimates and classification accuracy in the DINA model},
-  author={Rupp, Andr{\'e} A and Templin, Jonathan},
-  journal={Educational and Psychological Measurement},
-  volume={68},
-  number={1},
-  pages={78--96},
-  year={2008},
-  publisher={Sage Publications}
-}
-
-@article{tatsuoka1983rule,
-  title={Rule space: An approach for dealing with misconceptions based on item response theory},
-  author={Tatsuoka, Kikumi K},
-  journal={Journal of educational measurement},
-  volume={20},
-  number={4},
-  pages={345--354},
-  year={1983},
-  publisher={Wiley Online Library}
-}
-
-@inproceedings{sun2014alternating,
-  title={Alternating Recursive Method for Q-matrix Learning},
-  author={Sun, Yuan and Ye, Shiwei and Inoue, Shunya and Sun, Yi},
-  booktitle={Educational Data Mining 2014},
-  year={2014}
-}
-
-@inproceedings{mohamed2011discovering,
-  title={Discovering relations between noun categories},
-  author={Mohamed, Thahir P and Hruschka Jr, Estevam R and Mitchell, Tom M},
-  booktitle={Proceedings of the Conference on Empirical Methods in Natural Language Processing},
-  pages={1447--1455},
-  year={2011},
-  organization={Association for Computational Linguistics}
-}
-
-@inproceedings{lee2001algorithms,
-  title={Algorithms for non-negative matrix factorization},
-  author={Lee, Daniel D and Seung, H Sebastian},
-  booktitle={Advances in neural information processing systems},
-  pages={556--562},
-  year={2001}
-}
-
-@article{miettinen2008discrete,
-  title={The discrete basis problem},
-  author={Miettinen, Pauli and Mielikainen, Taneli and Gionis, Aristides and Das, Gautam and Mannila, Heikki},
-  journal={Knowledge and Data Engineering, IEEE Transactions on},
-  volume={20},
-  number={10},
-  pages={1348--1362},
-  year={2008},
-  publisher={IEEE}
-}
-
-@article{nau1978mathematical,
-  title={A mathematical analysis of human leukocyte antigen serology},
-  author={Nau, Dana S and Markowsky, George and Woodbury, Max A and Amos, D Bernard},
-  journal={Mathematical Biosciences},
-  volume={40},
-  number={3},
-  pages={243--270},
-  year={1978},
-  publisher={Elsevier}
-}
-
-@article{miettinen2008positive,
-  title={On the positive--negative partial set cover problem},
-  author={Miettinen, Pauli},
-  journal={Information Processing Letters},
-  volume={108},
-  number={4},
-  pages={219--221},
-  year={2008},
-  publisher={Elsevier}
-}
-
-@article{freund1997decision,
-  title={A decision-theoretic generalization of on-line learning and an application to boosting},
-  author={Freund, Yoav and Schapire, Robert E},
-  journal={Journal of computer and system sciences},
-  volume={55},
-  number={1},
-  pages={119--139},
-  year={1997},
-  publisher={Elsevier}
-}
-
-@article{templin2013obtaining,
-  title={Obtaining diagnostic classification model estimates using Mplus},
-  author={Templin, Jonathan and Hoffman, Lesa},
-  journal={Educational Measurement: Issues and Practice},
-  volume={32},
-  number={2},
-  pages={37--50},
-  year={2013},
-  publisher={Wiley Online Library}
-}
-
-@article{de2009dina,
-  title={DINA model and parameter estimation: A didactic},
-  author={De La Torre, Jimmy},
-  journal={Journal of Educational and Behavioral Statistics},
-  volume={34},
-  number={1},
-  pages={115--130},
-  year={2009},
-  publisher={SAGE Publications}
-}
-
-@article{henson2009defining,
-  title={Defining a family of cognitive diagnosis models using log-linear models with latent variables},
-  author={Henson, Robert A and Templin, Jonathan L and Willse, John T},
-  journal={Psychometrika},
-  volume={74},
-  number={2},
-  pages={191--210},
-  year={2009},
-  publisher={Springer}
-}
-
-@Manual{CDM,
-  title = {CDM: Cognitive Diagnosis Modeling},
-  author = {Alexander Robitzsch and Thomas Kiefer and Ann Cathrice George and Ali Uenlue},
-  year = {2015},
-  note = {R package version 4.5-0},
-  url = {http://CRAN.R-project.org/package=CDM}
- }
-
-@inproceedings{geerts2004tiling,
-  title={Tiling databases},
-  author={Geerts, Floris and Goethals, Bart and Mielik{\"a}inen, Taneli},
-  booktitle={Discovery science},
-  pages={278--289},
-  year={2004},
-  organization={Springer}
+@article{barnes2010novel,
+  title={Novel derivation and application of skill matrices: The q-matrix method},
+  author={Barnes, Tiffany},
+  journal={Handbook on educational data mining},
+  pages={159--172},
+  year={2010}
 }
 
 @article{beasley2012isolation,
@@ -338,15 +35,88 @@
   publisher={Elsevier}
 }
 
-@article{liu2012data,
-  title={Data-driven learning of Q-matrix},
-  author={Liu, Jingchen and Xu, Gongjun and Ying, Zhiliang},
-  journal={Applied psychological measurement},
-  volume={36},
-  number={7},
-  pages={548--564},
-  year={2012},
-  publisher={SAGE Publications}
+@inproceedings{beck2007identifiability,
+  title={Identifiability: A fundamental problem of student modeling},
+  author={Beck, Joseph E and Chang, Kai-min},
+  booktitle={International Conference on User Modeling},
+  pages={137--146},
+  year={2007},
+  organization={Springer}
+}
+
+@book{breiman1984classification,
+  title={Classification and regression trees},
+  author={Breiman, Leo and Friedman, Jerome and Stone, Charles J and Olshen, Richard A},
+  year={1984},
+  publisher={CRC press}
+}
+
+@article{breiman1998arcing,
+  title={Arcing classifier (with discussion and a rejoinder by the author)},
+  author={Breiman, Leo and others},
+  journal={The annals of statistics},
+  volume={26},
+  number={3},
+  pages={801--849},
+  year={1998},
+  publisher={Institute of Mathematical Statistics}
+}
+
+@article{buhlmann2007boosting,
+  title={Boosting algorithms: Regularization, prediction and model fitting},
+  author={B{\"u}hlmann, Peter and Hothorn, Torsten},
+  journal={Statistical Science},
+  pages={477--505},
+  year={2007},
+  publisher={JSTOR}
+}
+
+@inproceedings{caruana2006empirical,
+  title={An empirical comparison of supervised learning algorithms},
+  author={Caruana, Rich and Niculescu-Mizil, Alexandru},
+  booktitle={Proceedings of the 23rd international conference on Machine learning},
+  pages={161--168},
+  year={2006},
+  organization={ACM}
+}
+
+@book{casella2002statistical,
+  title={Statistical inference},
+  author={Casella, George and Berger, Roger L},
+  volume={2},
+  year={2002},
+  publisher={Duxbury Pacific Grove, CA}
+}
+
+@inproceedings{cen2006learning,
+  title={Learning factors analysis--a general method for cognitive model evaluation and improvement},
+  author={Cen, Hao and Koedinger, Kenneth and Junker, Brian},
+  booktitle={Intelligent tutoring systems},
+  pages={164--175},
+  year={2006},
+  organization={Springer}
+}
+
+@article{chen2015statistical,
+  title={Statistical analysis of Q-matrix based diagnostic classification models},
+  author={Chen, Yunxiao and Liu, Jingchen and Xu, Gongjun and Ying, Zhiliang},
+  journal={Journal of the American Statistical Association},
+  volume={110},
+  number={510},
+  pages={850--866},
+  year={2015},
+  publisher={Taylor \& Francis}
+}
+
+@article{chiu2009cluster,
+  title={Cluster analysis for cognitive diagnosis: Theory and applications},
+  author={Chiu, Chia-Yi and Douglas, Jeffrey A and Li, Xiaodong},
+  journal={Psychometrika},
+  volume={74},
+  number={4},
+  pages={633},
+  year={2009},
+  publisher={Springer}
 }
 
 @article{chiu2013nonparametric,
@@ -371,38 +141,29 @@
   publisher={SAGE Publications}
 }
 
-@article{wang2015consistency,
-  title={Consistency of Nonparametric Classification in Cognitive Diagnosis},
-  author={Wang, Shiyu and Douglas, Jeff},
-  journal={Psychometrika},
-  volume={80},
-  number={1},
-  pages={85--100},
-  year={2015},
-  publisher={Springer}
+@phdthesis{chung2014estimating,
+  title={Estimating the Q-matrix for cognitive diagnosis models in a Bayesian framework},
+  author={Chung, Meng-ta},
+  year={2014},
+  school={Columbia University}
 }
 
-@article{barnes2010novel,
-  title={Novel derivation and application of skill matrices: The q-matrix method},
-  author={Barnes, Tiffany},
-  journal={Handbook on educational data mining},
-  pages={159--172},
-  year={2010}
-}
+@Manual{CDM,
+  title = {CDM: Cognitive Diagnosis Modeling},
+  author = {Alexander Robitzsch and Thomas Kiefer and Ann Cathrice George and Ali Uenlue},
+  year = {2015},
+  note = {R package version 4.5-0},
+  url = {http://CRAN.R-project.org/package=CDM}
+ }
 
-@book{templin2010diagnostic,
-  title={Diagnostic measurement: Theory, methods, and applications},
-  author={Templin, Jonathan and Henson, Robert A and others},
-  year={2010},
-  publisher={Guilford Press}
-}
-
-@article{de2015general,
-  title={A General Method of Empirical Q-matrix Validation},
-  author={de la Torre, Jimmy and Chiu, Chia-Yi},
-  journal={Psychometrika},
-  pages={1--21},
-  year={2015},
+@article{corbett1994knowledge,
+  title={Knowledge tracing: Modeling the acquisition of procedural knowledge},
+  author={Corbett, Albert T and Anderson, John R},
+  journal={User modeling and user-adapted interaction},
+  volume={4},
+  number={4},
+  pages={253--278},
+  year={1994},
   publisher={Springer}
 }
 
@@ -416,6 +177,37 @@
   year={2008},
   publisher={Wiley Online Library}
 }
+ 
+@article{de2009dina,
+  title={DINA model and parameter estimation: A didactic},
+  author={De La Torre, Jimmy},
+  journal={Journal of Educational and Behavioral Statistics},
+  volume={34},
+  number={1},
+  pages={115--130},
+  year={2009},
+  publisher={SAGE Publications}
+}
+
+@article{de2015general,
+  title={A General Method of Empirical Q-matrix Validation},
+  author={de la Torre, Jimmy and Chiu, Chia-Yi},
+  journal={Psychometrika},
+  pages={1--21},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{desmarais2012mapping,
+  title={Mapping question items to skills with non-negative matrix factorization},
+  author={Desmarais, Michel C},
+  journal={ACM SIGKDD Explorations Newsletter},
+  volume={13},
+  number={2},
+  pages={30--36},
+  year={2012},
+  publisher={ACM}
+}
 
 @inproceedings{desmarais2013matrix,
   title={A matrix factorization method for mapping items to skills and for enhancing expert-based q-matrices},
@@ -426,78 +218,25 @@
   organization={Springer}
 }
 
-@inproceedings{gonzalez2015modeling,
-  title={Modeling Skill Acquisition Over Time with Sequence and Topic Modeling.},
-  author={Gonz{\'a}lez-Brenes, Jos{\'e} P},
-  booktitle={AISTATS},
+@inproceedings{desmarais2014refinement,
+  title={The refinement of a Q-matrix: Assessing methods to validate tasks to skills mapping},
+  author={Desmarais, Michel and Beheshti, Behzad and Xu, Peng},
+  booktitle={Educational Data Mining 2014},
+  year={2014}
+}
+
+@inproceedings{desmarais2015combining,
+  title={Combining techniques to refine item to skills Q-matrices with a partition tree},
+  author={Desmarais, Michel C and Xu, Peng and Beheshti, Behzad},
+  booktitle={Educational Data Mining 2015},
   year={2015}
 }
 
-@article{aleven2013knowledge,
-  title={--Knowledge Component (KC) Approaches to Learner Modeling},
-  author={Aleven, Vincent and Koedinger, Kenneth R},
-  journal={Design Recommendations for Intelligent Tutoring Systems},
-  pages={165},
-  year={2013}
-}
-
-@inproceedings{matsudamachine2015,
-  title={Machine beats experts: Automatic discovery of skill models for data-driven online course refinement},
-  pages= {101--108},
- booktitle={Educational Data Mining 2014},
- author={Matsuda, Noboru and Furukawa, Tadanobu and Bier, Norman and Faloutsos, Christos  }
-}
-
-@article{chen2015statistical,
-  title={Statistical analysis of Q-matrix based diagnostic classification models},
-  author={Chen, Yunxiao and Liu, Jingchen and Xu, Gongjun and Ying, Zhiliang},
-  journal={Journal of the American Statistical Association},
-  volume={110},
-  number={510},
-  pages={850--866},
-  year={2015},
-  publisher={Taylor \& Francis}
-}
-
-@article{henson2009q,
-  title={Q-matrix construction},
-  author={Henson, RA and Templin, JL},
-  year={2009}
-}
-
-@phdthesis{xiang2013nonlinear,
-  title={Nonlinear penalized estimation of true Q-Matrix in cognitive diagnostic models},
-  author={Xiang, Rui},
-  year={2013},
-  school={Columbia University}
-}
-
-@phdthesis{chung2014estimating,
-  title={Estimating the Q-matrix for cognitive diagnosis models in a Bayesian framework},
-  author={Chung, Meng-ta},
-  year={2014},
-  school={Columbia University}
-}
-
-@article{li2013constructing,
-  title={Constructing and validating a Q-matrix for cognitive diagnostic analyses of a reading test},
-  author={Li, Hongli and Suen, Hoi K},
-  journal={Educational Assessment},
-  volume={18},
-  number={1},
-  pages={1--25},
-  year={2013},
-  publisher={Taylor \& Francis}
-}
-
-@article{qin2015model,
-  title={Model identification and Q-matrix incremental inference in cognitive diagnosis},
-  author={Qin, ChunYing and Zhang, Liang and Qiu, Duoli and Huang, Lei and Geng, Tao and Jiang, Hao and Ren, Qun and Zhou, Jinzhi},
-  journal={Knowledge-Based Systems},
-  volume={86},
-  pages={66--76},
-  year={2015},
-  publisher={Elsevier}
+@misc{doroudi2017misidentified,
+  title={The misidentified identifiability problem of bayesian knowledge tracing},
+  author={Doroudi, Shayan and Brunskill, Emma},
+  year={2017},
+  publisher={International Conference on Educational Data Mining, EDM2017}
 }
 
 @incollection{durand2015evaluation,
@@ -509,15 +248,81 @@
   publisher={Springer}
 }
 
-@article{romero2014detection,
-  title={Detection of Q-Matrix Misspecification Using Two Criteria for Validation of Cognitive Structures under the Least Squares Distance Model.},
-  author={Romero, Sonia J and Ordo{\~n}ez, Xavier G and Ponsoda, Vincente and Revuelta, Javier},
-  journal={Psicologica: International Journal of Methodology and Experimental Psychology},
-  volume={35},
+@article{fayyad1996data,
+  title={From data mining to knowledge discovery in databases},
+  author={Fayyad, Usama and Piatetsky-Shapiro, Gregory and Smyth, Padhraic},
+  journal={AI magazine},
+  volume={17},
+  number={3},
+  pages={37},
+  year={1996}
+}
+
+@article{freund1997decision,
+  title={A decision-theoretic generalization of on-line learning and an application to boosting},
+  author={Freund, Yoav and Schapire, Robert E},
+  journal={Journal of computer and system sciences},
+  volume={55},
   number={1},
-  pages={149--169},
-  year={2014},
-  publisher={ERIC}
+  pages={119--139},
+  year={1997},
+  publisher={Elsevier}
+}
+
+@book{galbraith2002analysis,
+  title={The analysis and interpretation of multivariate data for social scientists},
+  author={Galbraith, JI and Moustaki, Irini and Bartholomew, David J and Steele, Fiona},
+  year={2002},
+  publisher={CRC Press}
+}
+
+@inproceedings{geerts2004tiling,
+  title={Tiling databases},
+  author={Geerts, Floris and Goethals, Bart and Mielik{\"a}inen, Taneli},
+  booktitle={Discovery science},
+  pages={278--289},
+  year={2004},
+  organization={Springer}
+}
+
+@inproceedings{gonzalez2015modeling,
+  title={Modeling Skill Acquisition Over Time with Sequence and Topic Modeling.},
+  author={Gonz{\'a}lez-Brenes, Jos{\'e} P},
+  booktitle={AISTATS},
+  year={2015}
+}
+
+@article{haertel1989using,
+  title={Using restricted latent class models to map the skill structure of achievement items},
+  author={Haertel, Edward H},
+  journal={Journal of Educational Measurement},
+  pages={301--321},
+  year={1989},
+  publisher={JSTOR}
+}
+
+@book{hastie2009elements,
+  title={The elements of statistical learning},
+  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{henson2009defining,
+  title={Defining a family of cognitive diagnosis models using log-linear models with latent variables},
+  author={Henson, Robert A and Templin, Jonathan L and Willse, John T},
+  journal={Psychometrika},
+  volume={74},
+  number={2},
+  pages={191--210},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{henson2009q,
+  title={Q-matrix construction},
+  author={Henson, RA and Templin, JL},
+  year={2009}
 }
 
 @article{kohn2015heuristic,
@@ -531,6 +336,165 @@
   publisher={Wiley Online Library}
 }
 
+@article{koren2009matrix,
+  title={Matrix factorization techniques for recommender systems},
+  author={Koren, Yehuda and Bell, Robert and Volinsky, Chris},
+  journal={Computer},
+  number={8},
+  pages={30--37},
+  year={2009},
+  publisher={IEEE}
+}
+
+@article{lee1999learning,
+  title={Learning the parts of objects by non-negative matrix factorization},
+  author={Lee, Daniel D and Seung, H Sebastian},
+  journal={Nature},
+  volume={401},
+  number={6755},
+  pages={788--791},
+  year={1999},
+  publisher={Nature Publishing Group}
+}
+
+@inproceedings{lee2001algorithms,
+  title={Algorithms for non-negative matrix factorization},
+  author={Lee, Daniel D and Seung, H Sebastian},
+  booktitle={Advances in neural information processing systems},
+  pages={556--562},
+  year={2001}
+}
+
+@article{li2013constructing,
+  title={Constructing and validating a Q-matrix for cognitive diagnostic analyses of a reading test},
+  author={Li, Hongli and Suen, Hoi K},
+  journal={Educational Assessment},
+  volume={18},
+  number={1},
+  pages={1--25},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{lindsey2014automatic,
+  title={Automatic discovery of cognitive skills to improve the prediction of student learning},
+  author={Lindsey, Robert V and Khajah, Mohammad and Mozer, Michael C},
+  booktitle={Advances in neural information processing systems},
+  pages={1386--1394},
+  year={2014}
+}
+
+@article{liu2012data,
+  title={Data-driven learning of Q-matrix},
+  author={Liu, Jingchen and Xu, Gongjun and Ying, Zhiliang},
+  journal={Applied psychological measurement},
+  volume={36},
+  number={7},
+  pages={548--564},
+  year={2012},
+  publisher={SAGE Publications}
+}
+
+@article{liu2013theory,
+  title={Theory of the self-learning Q-matrix},
+  author={Liu, Jingchen and Xu, Gongjun and Ying, Zhiliang},
+  journal={Bernoulli: official journal of the Bernoulli Society for Mathematical Statistics and Probability},
+  volume={19},
+  number={5A},
+  pages={1790},
+  year={2013},
+  publisher={NIH Public Access}
+}
+
+@article{madison2015effects,
+  title={The Effects of Q-Matrix Design on Classification Accuracy in the Log-Linear Cognitive Diagnosis Model},
+  author={Madison, Matthew J and Bradshaw, Laine P},
+  journal={Educational and Psychological Measurement},
+  volume={75},
+  number={3},
+  pages={491--511},
+  year={2015},
+  publisher={SAGE Publications}
+}
+
+@article{maris1995psychometric,
+  title={Psychometric latent response models},
+  author={Maris, Eric},
+  journal={Psychometrika},
+  volume={60},
+  number={4},
+  pages={523--547},
+  year={1995},
+  publisher={Springer}
+}
+
+@article{maris1999estimating,
+  title={Estimating multiple classification latent class models},
+  author={Maris, Eric},
+  journal={Psychometrika},
+  volume={64},
+  number={2},
+  pages={187--212},
+  year={1999},
+  publisher={Springer}
+}
+
+@inproceedings{matsudamachine2015,
+  title={Machine beats experts: Automatic discovery of skill models for data-driven online course refinement},
+  pages= {101--108},
+ booktitle={Educational Data Mining 2014},
+ author={Matsuda, Noboru and Furukawa, Tadanobu and Bier, Norman and Faloutsos, Christos  }
+}
+
+@article{miettinen2008discrete,
+  title={The discrete basis problem},
+  author={Miettinen, Pauli and Mielikainen, Taneli and Gionis, Aristides and Das, Gautam and Mannila, Heikki},
+  journal={Knowledge and Data Engineering, IEEE Transactions on},
+  volume={20},
+  number={10},
+  pages={1348--1362},
+  year={2008},
+  publisher={IEEE}
+}
+
+@article{miettinen2008positive,
+  title={On the positive--negative partial set cover problem},
+  author={Miettinen, Pauli},
+  journal={Information Processing Letters},
+  volume={108},
+  number={4},
+  pages={219--221},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@inproceedings{mohamed2011discovering,
+  title={Discovering relations between noun categories},
+  author={Mohamed, Thahir P and Hruschka Jr, Estevam R and Mitchell, Tom M},
+  booktitle={Proceedings of the Conference on Empirical Methods in Natural Language Processing},
+  pages={1447--1455},
+  year={2011},
+  organization={Association for Computational Linguistics}
+}
+
+@book{murphy2012machine,
+  title={Machine learning: a probabilistic perspective},
+  author={Murphy, Kevin P},
+  year={2012},
+  publisher={MIT press}
+}
+
+@article{nau1978mathematical,
+  title={A mathematical analysis of human leukocyte antigen serology},
+  author={Nau, Dana S and Markowsky, George and Woodbury, Max A and Amos, D Bernard},
+  journal={Mathematical Biosciences},
+  volume={40},
+  number={3},
+  pages={243--270},
+  year={1978},
+  publisher={Elsevier}
+}
+
 @incollection{nivznan2014mapping,
   title={Mapping problems to skills combining expert opinion and student data},
   author={Ni{\v{z}}nan, Juraj and Pel{\'a}nek, Radek and {\v{R}}ih{\'a}k, Ji{\v{r}}{\'\i}},
@@ -540,40 +504,14 @@
   publisher={Springer}
 }
 
-@article{templin2015diagnostic,
-  title={Diagnostic Assessment},
-  author={Templin, Jonathan},
-  journal={Technology and Testing: Improving Educational and Psychological Measurement},
-  pages={285},
+@article{qin2015model,
+  title={Model identification and Q-matrix incremental inference in cognitive diagnosis},
+  author={Qin, ChunYing and Zhang, Liang and Qiu, Duoli and Huang, Lei and Geng, Tao and Jiang, Hao and Ren, Qun and Zhou, Jinzhi},
+  journal={Knowledge-Based Systems},
+  volume={86},
+  pages={66--76},
   year={2015},
-  publisher={Routledge}
-}
-
-@article{xu2015identifiability,
-  title={Identifiability of Diagnostic Classification Models},
-  author={Xu, Gongjun and Zhang, Stephanie},
-  journal={Psychometrika},
-  pages={1--25},
-  year={2015},
-  publisher={Springer}
-}
-
-@article{sinharay2007assessing,
-  title={Assessing fit of cognitive diagnostic models a case study},
-  author={Sinharay, Sandip and Almond, Russell G},
-  journal={Educational and Psychological Measurement},
-  volume={67},
-  number={2},
-  pages={239--257},
-  year={2007},
-  publisher={Sage Publications}
-}
-
-@phdthesis{xiang2013nonlinear,
-  title={Nonlinear penalized estimation of true Q-Matrix in cognitive diagnostic models},
-  author={Xiang, Rui},
-  year={2013},
-  school={Columbia University}
+  publisher={Elsevier}
 }
 
 @article{quinlan1986induction,
@@ -595,25 +533,43 @@
   publisher={Morgan Kaufmann}
 }
 
-@book{breiman1984classification,
-  title={Classification and regression trees},
-  author={Breiman, Leo and Friedman, Jerome and Stone, Charles J and Olshen, Richard A},
-  year={1984},
-  publisher={CRC press}
+@article{romero2014detection,
+  title={Detection of Q-Matrix Misspecification Using Two Criteria for Validation of Cognitive Structures under the Least Squares Distance Model.},
+  author={Romero, Sonia J and Ordo{\~n}ez, Xavier G and Ponsoda, Vincente and Revuelta, Javier},
+  journal={Psicologica: International Journal of Methodology and Experimental Psychology},
+  volume={35},
+  number={1},
+  pages={149--169},
+  year={2014},
+  publisher={ERIC}
 }
 
-@article{therneau2015rpart,
-  title={rpart: Recursive Partitioning. R package version 4.1-10},
-  author={Therneau, Terry M and Atkinson, Beth and Ripley, Brian},
-  journal={Computer software program retrieved from http://CRAN. R-project. org/package= rpart},
-  year={2015}
+@article{rupp2007answer,
+  title={The answer is in the question: A guide for investigating the theoretical potentials and practical limitations of cognitive psychometric models},
+  author={Rupp, AA},
+  journal={International Journal of Testing},
+  volume={7},
+  pages={95--125},
+  year={2007}
 }
 
-@book{murphy2012machine,
-  title={Machine learning: a probabilistic perspective},
-  author={Murphy, Kevin P},
-  year={2012},
-  publisher={MIT press}
+@article{rupp2007cognitive,
+  title={Cognitive foundations of structured item response models},
+  author={Rupp, Andr{\'e} A and Mislevy, Robert J},
+  journal={Cognitive diagnostic assessment for education: Theories and applications},
+  pages={205--240},
+  year={2007}
+}
+
+@article{rupp2008effects,
+  title={The effects of Q-matrix misspecification on parameter estimates and classification accuracy in the DINA model},
+  author={Rupp, Andr{\'e} A and Templin, Jonathan},
+  journal={Educational and Psychological Measurement},
+  volume={68},
+  number={1},
+  pages={78--96},
+  year={2008},
+  publisher={Sage Publications}
 }
 
 @book{schapire2012boosting,
@@ -623,94 +579,89 @@
   publisher={MIT press}
 }
 
-@inproceedings{caruana2006empirical,
-  title={An empirical comparison of supervised learning algorithms},
-  author={Caruana, Rich and Niculescu-Mizil, Alexandru},
-  booktitle={Proceedings of the 23rd international conference on Machine learning},
-  pages={161--168},
-  year={2006},
-  organization={ACM}
-}
-
-@article{breiman1998arcing,
-  title={Arcing classifier (with discussion and a rejoinder by the author)},
-  author={Breiman, Leo and others},
-  journal={The annals of statistics},
-  volume={26},
-  number={3},
-  pages={801--849},
-  year={1998},
-  publisher={Institute of Mathematical Statistics}
-}
-
-@article{buhlmann2007boosting,
-  title={Boosting algorithms: Regularization, prediction and model fitting},
-  author={B{\"u}hlmann, Peter and Hothorn, Torsten},
-  journal={Statistical Science},
-  pages={477--505},
+@article{sinharay2007assessing,
+  title={Assessing fit of cognitive diagnostic models a case study},
+  author={Sinharay, Sandip and Almond, Russell G},
+  journal={Educational and Psychological Measurement},
+  volume={67},
+  number={2},
+  pages={239--257},
   year={2007},
-  publisher={JSTOR}
+  publisher={Sage Publications}
 }
 
-@book{hastie2009elements,
-  title={The elements of statistical learning},
-  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
-  year={2009},
-  publisher={Springer}
-}
-
-@inproceedings{cen2006learning,
-  title={Learning factors analysis--a general method for cognitive model evaluation and improvement},
-  author={Cen, Hao and Koedinger, Kenneth and Junker, Brian},
-  booktitle={Intelligent tutoring systems},
-  pages={164--175},
-  year={2006},
-  organization={Springer}
-}
-
-@inproceedings{gonzalez2015modeling,
-  title={Modeling Skill Acquisition Over Time with Sequence and Topic Modeling.},
-  author={Gonz{\'a}lez-Brenes, Jos{\'e} P},
-  booktitle={AISTATS},
-  year={2015}
-}
-
-@inproceedings{lindsey2014automatic,
-  title={Automatic discovery of cognitive skills to improve the prediction of student learning},
-  author={Lindsey, Robert V and Khajah, Mohammad and Mozer, Michael C},
-  booktitle={Advances in neural information processing systems},
-  pages={1386--1394},
+@inproceedings{sun2014alternating,
+  title={Alternating Recursive Method for Q-matrix Learning},
+  author={Sun, Yuan and Ye, Shiwei and Inoue, Shunya and Sun, Yi},
+  booktitle={Educational Data Mining 2014},
   year={2014}
 }
 
-@article{liu2012data,
-  title={Data-driven learning of Q-matrix},
-  author={Liu, Jingchen and Xu, Gongjun and Ying, Zhiliang},
-  journal={Applied psychological measurement},
-  volume={36},
-  number={7},
-  pages={548--564},
-  year={2012},
-  publisher={Sage Publications Sage CA: Los Angeles, CA}
-}
-
-@article{corbett1994knowledge,
-  title={Knowledge tracing: Modeling the acquisition of procedural knowledge},
-  author={Corbett, Albert T and Anderson, John R},
-  journal={User modeling and user-adapted interaction},
-  volume={4},
+@article{tatsuoka1983rule,
+  title={Rule space: An approach for dealing with misconceptions based on item response theory},
+  author={Tatsuoka, Kikumi K},
+  journal={Journal of educational measurement},
+  volume={20},
   number={4},
-  pages={253--278},
-  year={1994},
-  publisher={Springer}
+  pages={345--354},
+  year={1983},
+  publisher={Wiley Online Library}
 }
 
-@inproceedings{xu2016boosted,
-  title={Boosted Decision Tree for Q-matrix Refinement.},
-  author={Xu, Peng and Desmarais, Michel},
-  booktitle={EDM},
-  pages={551--555},
-  year={2016}
+@article{templin2006measurement,
+  title={Measurement of psychological disorders using cognitive diagnosis models.},
+  author={Templin, Jonathan L and Henson, Robert A},
+  journal={Psychological methods},
+  volume={11},
+  number={3},
+  pages={287},
+  year={2006},
+  publisher={American Psychological Association}
+}
+
+@book{templin2010diagnostic,
+  title={Diagnostic measurement: Theory, methods, and applications},
+  author={Templin, Jonathan and Henson, Robert A and others},
+  year={2010},
+  publisher={Guilford Press}
+}
+
+@article{templin2013obtaining,
+  title={Obtaining diagnostic classification model estimates using Mplus},
+  author={Templin, Jonathan and Hoffman, Lesa},
+  journal={Educational Measurement: Issues and Practice},
+  volume={32},
+  number={2},
+  pages={37--50},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@article{templin2015diagnostic,
+  title={Diagnostic Assessment},
+  author={Templin, Jonathan},
+  journal={Technology and Testing: Improving Educational and Psychological Measurement},
+  pages={285},
+  year={2015},
+  publisher={Routledge}
+}
+
+@article{therneau2015rpart,
+  title={rpart: Recursive Partitioning. R package version 4.1-10},
+  author={Therneau, Terry M and Atkinson, Beth and Ripley, Brian},
+  journal={Computer software program retrieved from http://CRAN. R-project. org/package= rpart},
+  year={2015}
+}
+
+@article{van2013properties,
+  title={Properties of the bayesian knowledge tracing model},
+  author={van De Sande, Brett},
+  journal={Journal of Educational Data Mining},
+  volume={5},
+  number={2},
+  pages={1--10},
+  year={2013},
+  publisher={International Educational Data Mining Society}
 }
 
 @incollection{vie2017review,
@@ -720,4 +671,50 @@
   pages={113--142},
   year={2017},
   publisher={Springer}
+}
+
+@article{wang2015consistency,
+  title={Consistency of Nonparametric Classification in Cognitive Diagnosis},
+  author={Wang, Shiyu and Douglas, Jeff},
+  journal={Psychometrika},
+  volume={80},
+  number={1},
+  pages={85--100},
+  year={2015},
+  publisher={Springer}
+}
+
+@phdthesis{xiang2013nonlinear,
+  title={Nonlinear penalized estimation of true Q-Matrix in cognitive diagnostic models},
+  author={Xiang, Rui},
+  year={2013},
+  school={Columbia University}
+}
+
+@article{xu2008fitting,
+  title={Fitting the structured general diagnostic model to NAEP data},
+  author={Xu, Xueli and Davier, Matthias},
+  journal={ETS Research Report Series},
+  volume={2008},
+  number={1},
+  pages={i--18},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@article{xu2015identifiability,
+  title={Identifiability of Diagnostic Classification Models},
+  author={Xu, Gongjun and Zhang, Stephanie},
+  journal={Psychometrika},
+  pages={1--25},
+  year={2015},
+  publisher={Springer}
+}
+
+@inproceedings{xu2016boosted,
+  title={Boosted Decision Tree for Q-matrix Refinement.},
+  author={Xu, Peng and Desmarais, Michel},
+  booktitle={EDM},
+  pages={551--555},
+  year={2016}
 }
